# Emotion-detection-app

./: README (copy).md  README.md  pyproject.toml  replit.nix
env/: pyvenv.cfg
