[tool.poetry]
name = "emotion-detection-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "emotion_detection_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.2"
numpy = "1.26.4"
scikit-learn = "1.5.0"
tensorflow = "2.16.1"
keras = "3.3.3"
flask = "3.0.3"
opencv-python = "4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
